--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "metascraper-image": "^5.4.0",
     "metascraper-title": "^5.4.0",
     "metascraper-url": "^5.4.0",
-    "sequelize": "^5.8.7",
+    "minimist": ">=0.2.1",
+    "sequelize": "^5.21.13",
     "sqlite3": "^4.0.8"
   },
   "license": "MIT"
